--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-@keyframes blinking {
-    from {
-        opacity: 0;
-    } to {
-        opacity: 1;
-    }
+:root {
+    --primary-colour: rgb(180, 210, 180);
+    --secondary-colour: rgb(25, 50, 25);
+    --shadow-colour: rgba(0, 0, 0, 0.55);
+    --background-colour: rgb(45, 55, 45);
 }
 
-@keyframes fadeIn {
+@keyframes blinking {
     from {
         opacity: 0;
     } to {
@@ -17,10 +16,10 @@
 #texture {
     position: fixed;
 
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
 
     background-image: url("./images/newspaper.png");
     background-size: cover;
@@ -36,14 +35,11 @@ body {
     align-items: center;
     justify-content: center;
 
-    padding: 2em;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    margin-top: 0px;
+    padding: 0px 2em;
 
     font-family: "Inconsolata", monospace;
 
-    background-color:  rgb(44, 56, 45);
+    background-color: var(--background-colour);
 
     overflow-x: hidden;
 }
@@ -53,10 +49,10 @@ body::before {
     display: block;
     position: fixed;
 
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
 
     background-image: linear-gradient(rgba(20, 20, 20, 0) 66%, rgba(0, 0, 0, 0.25) 33%);
     background-size: 120% 2px, 3px 120%;
@@ -65,12 +61,8 @@ body::before {
     pointer-events: none;
 }
 
-header h1 {
-    margin: 0px !important;
-}
-
 h1, h2, h3, h4, p, a {
-    color: hsl(139, 55%, 83%);
+    color: var(--primary-colour);
 }
 
 h2 {
@@ -85,6 +77,47 @@ h3 {
     font-size: 1.5em;
 }
 
+nav {
+    position: sticky;
+    top: -0.75vh;
+
+    width: 60em;
+
+    text-align: center;
+
+    background-color: var(--secondary-colour);
+    box-shadow: 0px 0.5em 0.75em;
+
+    border-radius: 0.325em;
+
+    z-index: 998;
+}
+
+ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+ul li {
+    padding: 0px 1vw;
+    font-size: 1.25em;
+}
+
+li {
+    list-style-type: none;
+}
+
+
+nav a {
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
 header {
     display: flex;
     align-items: center;
@@ -92,45 +125,32 @@ header {
 
     width: 80vw;
     padding-top: 1em;
-    text-align: center;
-    color: rgb(180, 210, 182);
 
     font-family: "Arvo", serif;
     font-weight: 700;
 
-    letter-spacing: 0.5em;
     font-size: 2.25vw;
+    color: var(--primary-colour);
+    text-shadow: 0.275em 0.275em  var(--shadow-colour);
+
+    text-align: center;
+    letter-spacing: 0.5em;
 }
+
+header h1 {
+    margin: 0px !important;
+}
+
 
 #header-cursor {
     width: 1.25em;
     height: 1.275em;
 
-    border-bottom: 0.275em rgb(180, 210, 182) solid;;
+    border-bottom: 0.275em solid var(--primary-colour);
+
+    filter: drop-shadow(0.25em 0.25em  var(--shadow-colour));
 
     animation: blinking 0.5s alternate infinite;
-}
-
-nav {
-    position: sticky;
-    top: -0.75vh;
-
-    background-color: rgb(25, 51, 28);
-    text-align: center;
-
-    box-shadow: 0px 0.5em 0.75em;
-
-    z-index: 998;
-}
-
-nav a {
-    color: hsl(139, 55%, 83%);
-    text-decoration: none;
-    font-weight: bold;
-}
-
-nav a:hover {
-    text-decoration: underline;
 }
 
 main {
@@ -143,9 +163,11 @@ main {
     width: 60em;
 }
 
-#intro, #skills, #education, #contact {
+#intro, #skills, #projects, #education, #contact {
     display: flex;
     flex-flow: row nowrap;
+
+    padding-top: 3em;
 }
 
 #projects {
@@ -168,24 +190,15 @@ main {
     height: 20em;
 }
 
-#intro, #skills, #projects, #education, #contact {
-    padding-top: 3em;
-}
-
-header, nav, footer {
-    width: 60em;
-    border-radius: 5px;
-}
-
 #tv {
     position: relative;
     top: -1em;
     right: -4.5em;
 
-    transform: rotate(-5deg);
-
     margin: 2em;
     padding: 2em;
+
+    transform: rotate(-5deg);
 }
 
 #tv-frame {
@@ -213,9 +226,9 @@ header, nav, footer {
     position: relative;
     right: -6.5em;
 
-    transform: rotate(-35deg);
-
     width: 25em;
+
+    transform: rotate(-35deg);
 }
 
 #pigeon {
@@ -232,21 +245,16 @@ header, nav, footer {
 }
 
 article {
-    background-color: rgb(25, 51, 28);
-
-    outline: 0.125em dashed rgb(180, 210, 182);
-    outline-offset: -1em;
-
     padding: 1em 3em;
+
+    background-color: var(--secondary-colour);
+
+    outline: 0.125em dashed var(--primary-colour);
+    outline-offset: -1em;
 }
 
 article, #signin {
-    filter: drop-shadow(1em 1em);
-}
-
-h4 {
-    font-size: 1em;
-    font-weight: bold;
+    filter: drop-shadow(0.825em 0.825em var(--shadow-colour));
 }
 
 footer {
@@ -254,29 +262,13 @@ footer {
     text-align: center;
 }
 
-ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-ul li {
-    padding-left: 1vw;
-    padding-right: 1vw;
-    font-size: 1.25em;
-}
-
-li {
-    list-style-type: none;
-}
-
 #signin {
     width: 20em;
     padding: 3em;
 
-    background-color: rgb(25, 51, 28);
+    background-color: var(--secondary-colour);
 
-    outline: 0.125em dashed rgb(180, 210, 182);
+    outline: 0.125em dashed var(--primary-colour);
     outline-offset: -1em;
 }
 
@@ -293,26 +285,25 @@ input {
     padding: 0.5em;
     margin: 1em;
 
-    color: rgb(180, 210, 182);
     font-family: "Inconsolata", monospace;
+    color: var(--primary-colour);
 
-    background-color: rgb(25, 51, 28);
+    background-color: var(--secondary-colour);
 
-    border: 0.175em solid rgb(180, 210, 182);
-    border-radius: 0.5em;
+    border: 0.175em solid var(--primary-colour);
 }
 
 input:focus {
-    outline: 0.25em solid rgb(180, 210, 182);
+    outline: 0.25em solid var(--primary-colour);
 }
 
 button {
     padding: 0.5em;
 
-    color: rgb(25, 51, 28);
     font-family: "Inconsolata", monospace;
+    color: var(--secondary-colour);
 
-    background-color: rgb(180, 210, 182);
+    background-color: var(--primary-colour);
 
     border: none;
     border-radius: 0.5em;
@@ -321,7 +312,7 @@ button {
 }
 
 button:hover {
-    background-color: rgb(139, 170, 141);
+    background-color: rgb(140, 170, 140);
 }
 
 @media only screen and (max-width: 799px) {
@@ -335,20 +326,19 @@ button:hover {
         right: 2em;
     }
 
-    main {
-        display: flex;
-        flex-flow: row wrap;
+    header {
+        font-size: 1.75em;
+    }
 
-        position: static;
-
+    main, #intro, #skills {
         width: 27.5em;
     }
 
-    #intro, #skills, #education, #contact {
+    main, #intro, #skills, #education, #contact {
+        position: static;
+        
         display: flex;
         flex-flow: row wrap;
-
-        position: static;
     }
 
     #tv {
@@ -358,13 +348,5 @@ button:hover {
 
     #books, #keyboard, #projects, #pigeon {
         right: 0em;
-    }
-
-    #intro, #skills {
-        width: 27.5em;
-    }
-
-    header {
-        font-size: 1.75em;
     }
 }
