--- a/reset.css
+++ b/reset.css
@@ -1,7 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
 
 ul, ol {
@@ -21,8 +20,8 @@ button, input {
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 
     font-family: sans-serif;
 
